kube-config/infinispan.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    labels:
      template: infinispan-ephemeral
    name: infinispan

# Compatibility: RoleBinding not understood
# - apiVersion: v1
#   groupNames: null
#   kind: RoleBinding
#   metadata:
#     labels:
#       template: infinispan-ephemeral
#     name: infinispan-view
#   roleRef:
#     name: view
#   subjects:
#   - kind: ServiceAccount
#     name: infinispan
#   userNames:
#   - system:serviceaccount:myproject:infinispan

- apiVersion: v1
  kind: Secret
  metadata:
    annotations:
      template.openshift.io/expose-infinispan.client.hotrod.auth_password: '{.data[''application-password'']}'
      template.openshift.io/expose-infinispan.client.hotrod.auth_username: '{.data[''application-user'']}'
    labels:
      template: infinispan-ephemeral
    name: infinispan
  stringData:
    application-password: developer
    application-user: developer
    management-password: wI6QtNOt
    management-user: PrMhfbvx
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The web server's HTTP port.
    labels:
      application: infinispan
      template: infinispan-ephemeral
    name: infinispan-http
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentConfig: infinispan
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Hot Rod's port.
      template.openshift.io/expose-infinispan.client.hotrod.server_list: '{.spec.clusterIP}:{.spec.ports[0].port}'
    labels:
      application: infinispan
      template: infinispan-ephemeral
    name: infinispan-hotrod
  spec:
    ports:
    - port: 11222
      targetPort: 11222
    selector:
      deploymentConfig: infinispan
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The management console.
    labels:
      application: infinispan
      template: infinispan-ephemeral
    name: infinispan-management
  spec:
    ports:
    - port: 9990
      targetPort: 9990
    selector:
      deploymentConfig: infinispan
- apiVersion: v1
  data:
    cloud-ephemeral.xml: |
      [...]
  kind: ConfigMap
  metadata:
    labels:
      application: infinispan
      template: infinispan-ephemeral
    name: infinispan-configuration

# Compatibility: Route not supported, use Ingress instead
# - apiVersion: v1
#   id: infinispan-management
#   kind: Route
#   metadata:
#     annotations:
#       description: Route for the management console.
#     labels:
#       application: infinispan
#       template: infinispan-ephemeral
#     name: infinispan-management
#   spec:
#     to:
#       kind: Service
#       name: infinispan-management

- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      description: Route for the HTTP endpoint.
      ingress.kubernetes.io/rewrite-target: /
    labels:
      application: infinispan
      template: infinispan-ephemeral
    name: infinispan-http
  spec:
    rules:
      - http:
          paths:
          - path: /infinispan
            backend:
              serviceName: infinispan-http
              servicePort: 8080

# Compatibility: use Deployment instead of DeploymentConfig
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      application: infinispan
      template: infinispan-ephemeral
    name: infinispan
  spec:
    replicas: 1
    selector:
      matchLabels:
        application: infinispan
    # Compatibility: strategy not understood
    # strategy:
    #   rollingParams:
    #     intervalSeconds: 20
    #     maxSurge: 1
    #     maxUnavailable: 1
    #     timeoutSeconds: 1200
    #     updatePeriodSeconds: 20
    #   type: Rolling
    template:
      metadata:
        labels:
          application: infinispan
          deploymentConfig: infinispan
        name: infinispan
      spec:
        containers:
        - args:
          - custom/cloud-ephemeral.xml
          - -Djboss.default.jgroups.stack=kubernetes
          image: jboss/infinispan-server:9.1.0.Final-2
          livenessProbe:
            exec:
              command:
              - /usr/local/bin/is_running.sh
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 80
          name: infinispan
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9990
            name: management
            protocol: TCP
          - containerPort: 8888
            name: ping
            protocol: TCP
          - containerPort: 11222
            name: hotrod
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /usr/local/bin/is_healthy.sh
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 60
            successThreshold: 2
            timeoutSeconds: 80
          resources:
            requests:
              cpu: "0.5"
              memory: 512Mi
          volumeMounts:
          - mountPath: /opt/jboss/infinispan-server/standalone/configuration/custom
            name: infinispan-configuration
        serviceAccountName: infinispan
        terminationGracePeriodSeconds: 120
        volumes:
        - configMap:
            name: infinispan-configuration
          name: infinispan-configuration
    # Compatibility: triggers not understood
    # triggers:
    # - type: ConfigChange
kind: List
metadata: {}
